# Fresh-Avocados

./: .env  .gitignore
backend/: .gitignore  Cargo.toml  build.rs  directories.toml
backend/src/: api.rs  lib.rs  library.rs  main.rs
backend/src/game/: achievements.rs  emulators.rs  mod.rs
backend/src/igdb/: client.rs
backend/src/torrent/: torrent.rs
frontend/: index.html  main.js  styles.css
frontend/js/: torrent.js
