[package]
name = "fresh-avocados"
version = "0.1.0"
description = "the avocado dude"
authors = ["you"]
edition = "2021"

[profile.dev]
debug = 0

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sigma_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
prost-build = "0.13.4"
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
reqwest = "0.12.12"
dotenv = "0.15.0"
anyhow = "1.0.95"
toml = "0.8.20"
serde = "1.0.217"
serde_json = "1.0.139"
once_cell = "1.20.3"

